--- a/.github/workflows/os-info.yml
+++ b/.github/workflows/os-info.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch
 
 jobs:
-  build:
+  OS-info:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
