rename job again
Signed-off-by: Melanie Cooper <melscoop@github.com>

--- a/.github/workflows/os-info.yml
+++ b/.github/workflows/os-info.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch
 
 jobs:
-  OS-info:
+  Runner-info:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
