--- a/.github/workflows/runner-info.yml
+++ b/.github/workflows/runner-info.yml
@@ -49,3 +49,28 @@ jobs:
         Get-WmiObject -Query "Select * from Win32_PhysicalMemory"
         echo "Disk Details:"
         Get-WmiObject -Query "Select * from Win32_LogicalDisk"
+        
+    - name: Get env variables and Runner, Worker logs
+      if: always()
+      run: |
+          echo "************************ CHECKING ENV VARIABLES *************************"
+          env
+          echo "************************ GETTING LOGS ***********************************"
+          export BASE_PATH="${RUNNER_WORKSPACE}/../.."
+          echo Base directory: $BASE_PATH
+          echo Content of base directory:
+          ls -als $BASE_PATH
+          echo Path of _diag directory: "${BASE_PATH}/_diag"
+          echo "************************ CONTENT OF _diag DIRECTORY *********************"
+          ls -als "${BASE_PATH}/_diag"
+          export RUNNER_LOG=`ls -t ${BASE_PATH}/_diag/Runner* | head -1`
+          echo "Newest Runner log file: $RUNNER_LOG"
+          echo "************************ CONTENT OF NEWEST RUNNER LOG *******************"
+          cat $RUNNER_LOG
+          echo "*************************************************************************"
+          export WORKER_LOG=`ls -t ${BASE_PATH}/_diag/Worker* | head -1`
+          echo "Newest Worker log file: $WORKER_LOG"
+          echo "************************ CONTENT OF NEWEST WORKER LOG *******************"
+          cat $WORKER_LOG
+          echo "*************************************************************************"
+
