--- a/.github/workflows/runner-info.yml
+++ b/.github/workflows/runner-info.yml
@@ -45,7 +45,7 @@ jobs:
         ls -als $BASE_PATH
         echo Path of _diag directory: "${BASE_PATH}/_diag"
         # echo "************************ CONTENT OF _diag DIRECTORY *********************"
-        # ls -als "${BASE_PATH}/_diag"
+        ls -als "${BASE_PATH}"
         export RUNNER_LOG=`ls -t ${BASE_PATH}/_diag/Runner* | head -1`
         echo "Newest Runner log file: $RUNNER_LOG"
         echo "************************ CONTENT OF NEWEST RUNNER LOG *******************"
