--- a/.github/workflows/runner-info.yml
+++ b/.github/workflows/runner-info.yml
@@ -51,7 +51,7 @@ jobs:
         echo listing of runner-diagnostics/runner-diagnostics directory:
         ls -als $BASE_PATH/work/runner-diagnostics/runner-diagnostics
         echo listing of _diag directory:
-        ls -als "${BASE_PATH}/_diag"
+        sudo ls -als "${BASE_PATH}/_diag"
         echo Path of _diag directory: "${BASE_PATH}/_diag"
         
         echo "************************ DIRECTORY TREE ******************************"
