removing _diag ref
Signed-off-by: Melanie Cooper <melscoop@github.com>

--- a/.github/workflows/runner-info.yml
+++ b/.github/workflows/runner-info.yml
@@ -58,9 +58,9 @@ jobs:
         ls -als $BASE_PATH/work/runner-diagnostics
         echo listing of runner-diagnostics/runner-diagnostics directory:
         ls -als $BASE_PATH/work/runner-diagnostics/runner-diagnostics
-        echo listing of _diag directory:
-        sudo ls -als "${BASE_PATH}/_diag"
-        echo Path of _diag directory: "${BASE_PATH}/_diag"
+        # echo listing of _diag directory:
+        # sudo ls -als "${BASE_PATH}/_diag"
+        # echo Path of _diag directory: "${BASE_PATH}/_diag"
 
         echo "************************ Disecting $RUNNER_WORKSPACE ***********************************"
 
